# IRIS-data-cleanser

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .venv  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.MD  LICENSE.md  MAINTAINERS.md  Makefile  NOTICE.md  OGL_LICENSE.md  README.md  SECURITY.md  UNINSTALL.md  convert_liccheck_report.py  docker-compose-template.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: constraints.txt  main.yaml
airbyte/: domestic_certificates_search.yaml  non_domestic_certificates_search.yaml  os_ngd.yaml  os_ngd_buildings_tiles_text.yaml  os_places_dpa.yaml  os_places_lpi.yaml
airbyte-client/: .env.example  1_create_resources.py  1_create_workspace.py  2_create_s3_source.py  2_run_syncs.py  3_create_destination.py  3_create_postgres_destination.py  3_update_resources.py  4_create_connection.py  4_delete_resources.py  5_update_resources.py  6_delete_all_resources.py  7_delete_source.py  8_delete_destination.py  8_run_syncs.py  9_delete_connection.py  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
airbyte-client/core/: auth.py  connections.py  destinations.py  sources.py  workspaces.py
airbyte/connectors/: domestic_certificates_search.yaml  non_domestic_certificates_search.yaml  os_ngd_buildings.yaml
airbyte/england_wales/: england_wales_domestic_certificates.yaml  england_wales_nondomestic_certificates.yaml
airbyte/scotland/: scotland_domestic_certificates.yaml  scotland_nondomestic_certificates.yaml
airbyte/source-epc-recommendations/: .dockerignore  Dockerfile  README.md  setup.py
airbyte/temp/: eng.py  northern_ireland.py  scotland.py  traceback.json  wales.py
c477-pipeline-docs/: mkdocs.yml
c477-pipeline-docs/docs/: .venv  airbyte.md  dbt.md  getting_started.md  index.md  postgreSQL.md  python.md  python_airbyte.md  python_dbt.md  references.md
c477-pipeline-docs/site/: 404.html  airbyte.html  aws_deployment.html  dbt.html  getting_started.html  home.html  index.html  postgreSQL.html  python.html  python_airbyte.html  python_dbt.html  references.html
c477_data_cleansing/: .secrets.baseline  LPI Classifiers Removed.xlsx  dbt_project.yml  packages.yml  requirements.txt
c477_data_cleansing/models/: address_base_plus_s3_export.py  address_profiling_s3_export.py  improvement_measures_s3_export.py  int_epc_certificates.py  int_epc_certificates.yml  int_os_epc.sql  int_os_epc.yml  mart_address_base_plus.py  mart_address_profiling.py  mart_address_profiling_with_sap.py  mart_reduced_co2_measures.py  sources.yml  stg_england_wales_certificates.sql  stg_epc_certificates.sql  stg_epc_certificates.yml  stg_epc_recommendations.sql  stg_epc_recommendations.yml  stg_os_aberdeen.sql  stg_os_places.sql  stg_os_places.yml  stg_scottish_epc_certificates.sql  stg_uk_epc_certificates.sql  stg_uk_epc_recommendations.sql  stg_uk_os.sql  stg_uk_os.yml
data_cleansing_pipeline/: dbt_project.yml
data_cleansing_pipeline/models/: address_base_plus_s3_export.py  address_profiling_s3_export.py  epc_with_uprn.py  epc_without_uprn.py  epc_without_uprn.yml  export.py  improvement_measures_s3_export.py  int_epc_certificates.py  int_os_epc.sql  logging_config.py  mart_address_profiling.py  mart_address_profiling.yml  sources.yml  (+4 more)
dbt-pipeline/: .env.local  .user.yml  README.md  dbt_project.yml  export.py  profiles.yml  pyproject.toml  requirements.txt
dbt-pipeline/dbt-epc/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml  publish-image.sh
dbt-pipeline/dbt-epc-no-uprn/: Dockerfile  dbt_project.yml  packages.yml  profiles.yml  publish-image.sh
dbt-pipeline/dbt-epc-no-uprn/models/: int_epc_no_uprn_address_clean.sql  int_epc_no_uprn_address_dedup.sql  int_epc_no_uprn_address_features.sql  int_epc_no_uprn_address_split.sql  mart_no_uprn_address_profiling.sql  sources.yml  stg_epc_no_uprn_certificates.sql  stg_epc_no_uprn_certificates.yml
dbt-pipeline/dbt-epc/models/: epc_with_uprn.py  epc_with_uprn.yml  int_epc_address_clean.sql  int_epc_address_dedup.sql  int_epc_address_features.sql  int_epc_address_split.sql  mart_address_profiling-old.py  mart_address_profiling.sql  sources.yml  stg_epc_certificates.sql  stg_epc_certificates.yml
dbt-pipeline/dbt-os-ngd-address/: Dockerfile  dbt_project.yml  packages.yml  profiles.yml  publish-image.sh
dbt-pipeline/dbt-os-ngd-address/models/: mart_address_base_plus.py  mart_address_base_plus.yml  mart_os_ngd_address.sql  sources.yml  stg_address_join_toid.sql  stg_address_join_toid.yml  stg_best_toid.sql  stg_os_ngd_address.sql  stg_os_ngd_address.yml  stg_os_places.sql  stg_os_places.yml
dbt-pipeline/dbt-os-ngd-buildings/: Dockerfile  dbt_project.yml  packages.yml  profiles.yml  publish-image.sh
dbt-pipeline/dbt-os-ngd-buildings/models/: int_os_ngd_buildings.py  int_os_ngd_buildings.yml  os_ngd_buildings_s3_export.py  sources.yml  stg_os_ngd_buildings.sql  stg_os_ngd_buildings.yml
dbt-pipeline/infrastructure/: Dockerfile.epc
dbt-pipeline/macros/: drop_tables.sql
dbt-pipeline/models/: address_base_plus_s3_export.py  address_profiling_s3_export.py  epc_with_uprn.py  epc_with_uprn.yml  epc_without_uprn.py  int_epc_certificates.py  int_os_ngd_buildings.py  mart_address_profiling.py  mart_reduced_co2_measures.py  mart_reduced_co2_measures.yml  os_ngd_buildings_s3_export.py  sources.yml  stg_epc_certificates.sql  stg_os_ngd_buildings.sql
dbt-pipeline/tests/: tests.yml
dbt-pipeline/utils/: export.py  logging_config.py
developer_docs/: DATA_PIPELINE_DIAGRAM.md  RUNNING_CODE_DEV_TOOLS.md
docs/: AWS EC2 Setup.md  AWS RDS Setup.md  detect_secrets.md  getting_started.md  project_specific_setup.md  quickstart.md  using_poetry.md
notebooks/: 2024-01-16 - C477 - Final Data Drop.ipynb  C477 - Fuzzy Matching Missing EPC UPRNs.ipynb  address-matching.ipynb  airbyte-api-testing.ipynb  data-diff.ipynb  local_authority_districts.ipynb  recommendations.py  regions.ipynb
repository-configuration/: terraform.tfstate  variables.tf
(+87 files in other folders)
